Project Assignment/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Phone_Number__c</fullName>
        <label>Bank Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Batch_Time__c</fullName>
        <label>Batch Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sikar</fullName>
                </value>
                <value>
                    <fullName>Jaipur</fullName>
                </value>
                <value>
                    <fullName>Ajmer</fullName>
                </value>
                <value>
                    <fullName>Tonk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>11th Class</fullName>
                </value>
                <value>
                    <fullName>12th Class</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <label>Current Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Donation_Amount__c</fullName>
        <label>Donation Amount</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exam_Fees_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exam Fees Submitted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Father_Mobile_Number__c</fullName>
        <label>Father Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Father_Name__c</fullName>
        <label>Father Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fees_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fees Submitted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Phone_Number__c</fullName>
        <label>Home Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IFSC_Code__c</fullName>
        <label>IFSC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Donation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Donation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Profile__c</fullName>
        <label>LinkedIn Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Mobile_No__c</fullName>
        <label>Mobile No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Overall_Grade__c</fullName>
        <label>Overall Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>A+</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>B+</fullName>
                </value>
                <value>
                    <fullName>C+</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pending_Exam_Fees__c</fullName>
        <label>Pending Exam Fees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pending_Fees_Amount__c</fullName>
        <label>Pending Fees Amount</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pending_Overall_Amount__c</fullName>
        <label>Pending Overall Amount</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Resume__c</fullName>
        <label>Resume</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Roll_Number__c</fullName>
        <label>Roll Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Section A</fullName>
                </value>
                <value>
                    <fullName>Section B</fullName>
                </value>
                <value>
                    <fullName>Section C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stream__c</fullName>
        <label>Stream</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Computer Science Engineering</fullName>
                </value>
                <value>
                    <fullName>Mechanical Engineering</fullName>
                </value>
                <value>
                    <fullName>Civil Engineering</fullName>
                </value>
                <value>
                    <fullName>Bio-Chemical Engineering</fullName>
                </value>
                <value>
                    <fullName>Electrical Engineering</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Address__c</fullName>
        <label>Student Address</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Email__c</fullName>
        <label>Student Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Subjects_in_which_Back__c</fullName>
        <label>Subjects in which Back</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>X1st_Sem_Back__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mathematics</fullName>
                </value>
                <value>
                    <fullName>Computer Programing</fullName>
                </value>
                <value>
                    <fullName>Physics</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Environment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1st_Sem_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1st Sem Back?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1st_Sem_Percentage__c</fullName>
        <label>1st Sem Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X2nd_Sem_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2nd Sem Back?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2nd_Sem_Percentage__c</fullName>
        <label>2nd Sem Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X2nd_Sem_Subjects_in_which_Back__c</fullName>
        <label>2nd Sem(Subjects in which Back)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Engineering Mathematics-II.</fullName>
                </value>
                <value>
                    <fullName>Engineering Physics/ Engineering Chemistry.</fullName>
                </value>
                <value>
                    <fullName>Basic Electrical Engineering / Basic Electronics Engineering.</fullName>
                </value>
                <value>
                    <fullName>Programming and Problem Solving / Engineering Mechanics.</fullName>
                </value>
                <value>
                    <fullName>Engineering Drawing (Engineering Graphics )</fullName>
                </value>
                <value>
                    <fullName>Project-Based Learning.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X3rd_Sem_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3rd Sem Back?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X3rd_Sem_Percentage__c</fullName>
        <label>3rd Sem Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X3rd_Sem_Subjects_in_which_Back__c</fullName>
        <label>3rd Sem(Subjects in which Back)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Theory of Machines - I</fullName>
                </value>
                <value>
                    <fullName>Basic Electronics</fullName>
                </value>
                <value>
                    <fullName>Transform Calculus (Mathematics – V)</fullName>
                </value>
                <value>
                    <fullName>Introduction to Material Science and Engineering</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X4th_Sem_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>4th Sem Back?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X4th_Sem_Percentage__c</fullName>
        <label>4th Sem Percentage</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X4th_Sem_Subjects_in_which_Back__c</fullName>
        <label>4th Sem(Subjects in which Back)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Thermodynamics.</fullName>
                </value>
                <value>
                    <fullName>Engineering Materials.</fullName>
                </value>
                <value>
                    <fullName>Manufacturing Technology-II.</fullName>
                </value>
                <value>
                    <fullName>Theory of Machines.</fullName>
                </value>
                <value>
                    <fullName>Strength of Materials.</fullName>
                </value>
                <value>
                    <fullName>Machine Drawing.</fullName>
                </value>
                <value>
                    <fullName>Professional Practice -III.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <recordTypes>
        <fullName>Registrar_Layout</fullName>
        <active>true</active>
        <label>Registrar Layout</label>
    </recordTypes>
    <recordTypes>
        <fullName>Teacher_Layout</fullName>
        <active>true</active>
        <label>Teacher Layout</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>